--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://denamahmud.github.io/react-crud-app/",
+  "homepage": "https://denamahmud.github.io/CRUD-react-app/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
